--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-<title>Hola</title>
-</head>
-<body>
-<p>Proximamente... página web del cereal BanFree</p>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Próximamente... sitio web oficial del cereal Banfree</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #F9F9F9;
+        color: #333333;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+      }
+      h1 {
+        margin-top: 50px;
+        font-size: 3em;
+      }
+      p {
+        font-size: 1.5em;
+        margin-top: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Próximamente...</h1>
+    <p>Sitio web oficial del cereal Banfree</p>
+  </body>
 </html>
